--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ crispy-bootstrap4==2024.10
 Django==5.1.6
 django-crispy-forms==2.3
 pillow==11.1.0
+python-decouple==3.8
 sqlparse==0.5.3
 tzdata==2025.1
